# CodeCompass-rr-plugin

plugins/rr/: CMakeLists.txt
plugins/rr/service/: CMakeLists.txt  rr.thrift
plugins/rr/service/include/service/: rrservice.h
plugins/rr/service/src/: plugin.cpp  rrservice.cpp
plugins/rr/webgui/css/: rr.css
plugins/rr/webgui/js/: rr.js
